--- a/Mod.html
+++ b/Mod.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>残流光-plugins</title>
+    <title>残流光-Mod</title>
 </head>
 <body>
     <dev>
-        "hi there,here is plugins"
-    </dev>
-    <dev id="md">
+        <h1>
+            "hi there,here is mod"
+        </h1>
     </dev>
 </body>
 </html>
