--- a/index.html
+++ b/index.html
@@ -1,4 +1,60 @@
-<!doctype html><html lang=""><head><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>残流光_圣迹</title><link rel="shortcut icon" href="img/icon.jpg" type="image/x-icon"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css"><style>@import url("cs/cess.css");</style><script defer="defer" src="/js/chunk-vendors.2d0daff7.js"></script><script defer="defer" src="/js/app.42e1e9dc.js"></script></head><body for="html-export"><div class="title"><div><h2 class="box0">snugbrick's page</h2><span class="box"><img src="img/server.png" alt="server"> <a href="Mod.html">Mod</a> </span><span class="box2"><img src="img/plugin.png" alt="plugin"> <a href="Plugins.html">Plugins</a></span></div></div><div class="leftContent"><div class="content1"><h2 class="menu">菜单</h2></div><div class="content2"></div><div class="content3"></div></div><div class="rightContent"><h2 class="lineHead">写在最前面:</h2><div class="_codeBlockMaxi">&nbspHi I'm <a class="_href" href="https://github.com/snugbrick">snugbrick</a> 也可以叫我圣迹(残流光)<br>&nbsp喜欢minecraft,热衷于给minecraft编写插件和模组<br>&nbsp喜欢用Java和Kotlin,正在学习c/cpp和.js什么的<br>&nbsp是高二学生,总是没有太多精力<br>&nbsp想找大佬带qwq</div><div class="line">谁家readme使者<br><br></div><h2 class="lineHead">项目:</h2><div class="_codeBlockMini"><a class="codeBlockHref" href="https://github.com/snugbrick/MiracleRPG-1.20.4">MiracleRPG-1.20.4</a> <a>&nbsp奇迹RPG #移植自基岩模组——星辰RPG</a></div><div class="_codeBlockMini"><a class="codeBlockHref" href="https://github.com/snugbrick/sakuraTech">sakuraTech</a> <a>&nbsp樱花科技 #粘液科技附属</a></div><div class="_codeBlockMini"><a class="codeBlockHref" href="https://github.com/snugbrick/emploWar">emploWar</a> <a>&nbsp职业战争 #Minecraft Plugin</a></div><div class="_codeBlockMini"><a class="codeBlockHref" href="https://github.com/snugbrick/simpleTrade">simpleTrade</a> <a>&nbsp交易 #Minecraft Plugin</a></div><div class="line">要是有人给我交pr帮我写该多好啊<br><br></div><div id="app"></div><div><h1></h1></div></div></body><style>/*代码块*/
+<!doctype html>
+<html lang="">
+
+<head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>圣地奇迹的个人主页</title>
+  <link rel="shortcut icon" href="img/icon.jpg" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
+  <style>
+    @import url("cs/cess.css");
+  </style>
+  <script defer="defer" src="/js/chunk-vendors.2d0daff7.js"></script>
+  <script defer="defer" src="/js/app.42e1e9dc.js"></script>
+</head>
+
+<body for="html-export">
+  <div class="title">
+    <div>
+      <h2 class="box0">snugbrick's page</h2><span class="box"><img src="img/server.png" alt="server"> <a
+          href="Mod.html">Mod</a> </span><span class="box2"><img src="img/plugin.png" alt="plugin"> <a
+          href="Plugins.html">Plugins</a></span>
+    </div>
+  </div>
+  <div class="leftContent">
+    <div class="content1">
+      <h2 class="menu">菜单</h2>
+    </div>
+    <div class="content2"></div>
+    <div class="content3"></div>
+  </div>
+  <div class="rightContent">
+    <h2 class="lineHead">写在最前面:</h2>
+    <div class="_codeBlockMaxi">&nbspHi I'm <a class="_href" href="https://github.com/snugbrick">snugbrick</a>
+      也可以叫我圣迹(残流光)<br>&nbsp喜欢minecraft,热衷于给minecraft编写插件和模组<br>&nbsp喜欢用Java和Kotlin,正在学习c/cpp和.js什么的<br>&nbsp是高二学生,总是没有太多精力<br>&nbsp想找大佬带qwq
+    </div>
+    <div class="line">谁家readme使者<br><br></div>
+    <h2 class="lineHead">项目:</h2>
+    <div class="_codeBlockMini"><a class="codeBlockHref"
+        href="https://github.com/snugbrick/MiracleRPG-1.20.4">MiracleRPG-1.20.4</a> <a>&nbsp奇迹RPG #移植自基岩模组——星辰RPG</a>
+    </div>
+    <div class="_codeBlockMini"><a class="codeBlockHref" href="https://github.com/snugbrick/sakuraTech">sakuraTech</a>
+      <a>&nbsp樱花科技 #粘液科技附属</a></div>
+    <div class="_codeBlockMini"><a class="codeBlockHref" href="https://github.com/snugbrick/emploWar">emploWar</a>
+      <a>&nbsp职业战争 #Minecraft Plugin</a></div>
+    <div class="_codeBlockMini"><a class="codeBlockHref" href="https://github.com/snugbrick/simpleTrade">simpleTrade</a>
+      <a>&nbsp交易 #Minecraft Plugin</a></div>
+    <div class="line">要是有人给我交pr帮我写该多好啊<br><br></div>
+    <div id="app"></div>
+    <div>
+      <h1></h1>
+    </div>
+  </div>
+</body>
+<style>
+  /*代码块*/
   ._codeBlockMaxi {
     position: relative;
     top: 30px;
@@ -109,4 +165,7 @@
     position: relative;
     text-align: center;
     border-left: 5px solid #5bc0af;
-  }</style></html>
+  }
+</style>
+
+</html>
