--- a/vueNew/public/index.html
+++ b/vueNew/public/index.html
@@ -48,6 +48,7 @@
       &nbsp想找大佬带qwq
     </div>
     <div class="line">谁家readme使者<br><br></div>
+
     <h2 class="lineHead">项目:</h2>
     <div class="_codeBlockMini"><a class="codeBlockHref"
         href="https://github.com/snugbrick/MiracleRPG-1.20.4">MiracleRPG-1.20.4</a>
@@ -63,6 +64,13 @@
       <a>&nbsp交易 #Minecraft Plugin</a>
     </div>
     <div class="line">要是有人给我交pr帮我写该多好啊<br><br></div>
+
+    
+    <div class="_codeBlockMini">emmmmmmmmm 应该给你展示些什么呢(翻找)<br></div>
+    <div class="_codeBlockMini">似乎没啥可以写的欸......这样？ -><br></div>
+    <div class="line">圣地奇迹，原名张某某(2006 - )<br></div>
+    <div class="_codeBlockMini">算了吧算了吧，等到我有想法了再写 XI(这是表情哦)<br></div>
+
     <div id="app"></div>
     <div>
       <h1></h1>
